--- a/src/tr_hy002.ipynb
+++ b/src/tr_hy002.ipynb
@@ -25,8 +25,8 @@
     "\n",
     "#新たに特徴量weatherを定義し、\n",
     "#precipitation(降水量)が0の場合は、晴れとして0を、雨の場合は1を定義\n",
-    "tr.loc[te['precipitation'].values > 0, 'weather'] = 1\n",
-    "tr.loc[te['precipitation'].values == 0, 'weather'] = 0\n",
+    "tr.loc[tr['precipitation'].values > 0, 'weather'] = 1\n",
+    "tr.loc[tr['precipitation'].values == 0, 'weather'] = 0\n",
     "te.loc[te['precipitation'].values > 0, 'weather'] = 1\n",
     "te.loc[te['precipitation'].values == 0, 'weather'] = 0\n",
     "\n",
