--- a/src/tr_hy002.ipynb
+++ b/src/tr_hy002.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -29,6 +29,11 @@
     "tr.loc[tr['precipitation'].values == 0, 'weather'] = 0\n",
     "te.loc[te['precipitation'].values > 0, 'weather'] = 1\n",
     "te.loc[te['precipitation'].values == 0, 'weather'] = 0\n",
+    "\n",
+    "#天気情報のうち、weather以外の特徴量を削除\n",
+    "drop_col=[\"avg_temperature\",\"high_temperature\",\"low_temperature\",\"precipitation\",\"hours_sunlight\",\"solar_radiation\",\"deepest_snowfall\",\"total_snowfall\",\"avg_wind_speed\",\"avg_vapor_pressure\",\"avg_local_pressure\",\"avg_humidity\",\"avg_sea_pressure\",\"cloud_cover\"]\n",
+    "tr=tr.drop(drop_col,axis=1)\n",
+    "te=te.drop(drop_col,axis=1)\n",
     "\n",
     "#ファイル出力\n",
     "tr.to_csv(\"tr_hy002.csv\")\n",
