--- a/src/tr_hy003.ipynb
+++ b/src/tr_hy003.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#インポート\n",
@@ -57,6 +59,11 @@
     "    tr.loc[(tr['air_store_id'].values == k[0])&(tr['weather'].values == k[1]), 'weather_visitor_min'] = k[2]\n",
     "    te.loc[(te['air_store_id'].values == k[0])&(te['weather'].values == k[1]), 'weather_visitor_min'] = k[2]\n",
     "\n",
+    "#air_store_idの特徴量を削除\n",
+    "drop_col=[\"air_store_id\"]\n",
+    "tr=tr.drop(drop_col,axis=1)\n",
+    "te=te.drop(drop_col,axis=1)\n",
+    "\n",
     "#ファイル出力\n",
     "tr.to_csv(\"tr_hy003.csv\")\n",
     "te.to_csv(\"te_hy003.csv\")"
@@ -65,21 +72,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
