店毎の天気の0,1のvisitorsのmax,min,med,mean
店毎の天気の0,1のvisitorsのmax,min,med,mean

--- a/src/tr_hy003.ipynb
+++ b/src/tr_hy003.ipynb
@@ -59,8 +59,8 @@
     "    tr.loc[(tr['air_store_id'].values == k[0])&(tr['weather'].values == k[1]), 'weather_visitor_min'] = k[2]\n",
     "    te.loc[(te['air_store_id'].values == k[0])&(te['weather'].values == k[1]), 'weather_visitor_min'] = k[2]\n",
     "\n",
-    "#air_store_idの特徴量を削除\n",
-    "drop_col=[\"air_store_id\"]\n",
+    "#天気情報のうち、weather以外の特徴量を削除\n",
+    "drop_col=[\"Unnamed: 0\",\"air_store_id\"]\n",
     "tr=tr.drop(drop_col,axis=1)\n",
     "te=te.drop(drop_col,axis=1)\n",
     "\n",
