店毎の天気の0,1のvisitorsのmax,min,med,mean
店毎の天気の0,1のvisitorsのmax,min,med,mean

--- a/src/tr_hy003.ipynb
+++ b/src/tr_hy003.ipynb
@@ -39,10 +39,12 @@
     "tr_max_src=tr.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].max()\n",
     "tr_min_src=tr.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].min()\n",
     "\n",
-    "te_mean_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].mean()\n",
-    "te_median_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].median()\n",
-    "te_max_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].max()\n",
-    "te_min_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].min()\n",
+    "#testデータにはvisitorsの情報は与えられていない(20固定)為、trainのデータを元に数値を算出している。\n",
+    "#よって以下のプログラムは必要無い。マージにおいても、trainのデータをfor文で回している。\n",
+    "#te_mean_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].mean()\n",
+    "#te_median_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].median()\n",
+    "#te_max_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].max()\n",
+    "#te_min_src=te.groupby(['air_store_id', 'weather'], as_index=False)['visitors'].min()\n",
     "\n",
     "\n",
     "#算出した店毎の天気の0,1のvisitorsのmax,min,med,meanをマージ\n",
